--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
           <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt="Hrika" height="600px"></div>
+              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt="Hrika" style="height: 600px; width: auto;"></div>
               <div class="member-info">
                 <h4>Harika</h4>
                 
@@ -405,7 +405,7 @@
 
           <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/team-2.png" class="img-fluid" alt=""  height="600px"></div>
+              <div class="pic"><img src="assets/img/team/team-2.png" class="img-fluid" alt="" style="height: 600px; width: auto;"></div>
               <div class="member-info">
                 <h4>Chaitanya</h4>
                 
